# study_rust

./: Cargo.toml  Dockerfile  docker-compose.yml
app/: Cargo.toml
app/src/api/: mod.rs  user_api.rs
app/src/models/: mod.rs
src/: main.rs
src/api/: ipn_api.rs
src/models/: ipn_model.rs
src/repository/: mongodb_repo.rs
